# nixos-config

./: .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  Taskfile.yml  configuration.nix-x230  devenv.nix  devenv.yaml  flake-repl.nix  flake.nix  justfile  overlay.nix  shell.nix  util.nix
contrib/: bootstrap.sh  build_machine_config.sh  custom-scripts.nix  generate_liveusb.sh  goreplay-capture.sh  home-manager-status.sh  iso.nix  mkpythonenv.yml  nixpkgs-status.sh  review-installed-packages.sh  review-new-packages.sh  update-home-manager.sh  update-nixpkgs.sh
custom-services/: imapfilter.nix  sshuttle.nix  vpn.nix
dotfiles/: .gitignore  .guile  .keep  .mailcap  mpd.conf  wimpulation.json
facets/: archive.nix  media.nix  misc.nix  monitoring.nix  networking.nix  nixtools.nix  security.nix  shell.nix  textworks.nix  virt.nix
hardware/: bluetooth.nix  intel.nix  laptop.nix  misc.nix
machines/: laptoptop.nix  momcat.nix  x230.nix
modules/: attributes.nix  default.nix  nixopts.nix  scanner.nix  security.nix  sound.nix  subst.nix  system.nix  util.nix  wmutil.nix
modules/common/ccpp/templates/cmake/: .devenv  CMakeLists.txt
nix/: setup.nix  sources.json  sources.nix
overlay/: 01-proposed.nix  01-unstable.nix  02-bleeding.nix  02-git-quick-stats.nix  03-git-credentials-helper.nix  03-tdlib.nix  03-zathura.nix  04-telega-server.nix  05-firefox-addons.nix  05-xkeysnail.nix  06-git-wip.nix  06-ntangle.nix  07-dbcli.nix  07-stgit.nix  09-gtm.nix  10-dbcli.nix  12-shyaml.nix  12-tmux-fzf-url.nix  13-img.nix  14-dunst.nix  (+16 more)
(+1537 files in other folders)
